# ZoomToText

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
scripts/: bootstrap.ps1
tests/: test_asr.py  test_cli.py  test_pipeline.py  test_summarizer.py
zoom_to_text/: asr.py  capture.py  cli.py  pipeline.py  summarizer.py
