[project]
name = "zoom-to-text"
version = "0.1.0"
requires-python = ">=3.10"
description = "CLI tool for transcribing and summarizing lecture audio."
authors = [{name = "ZoomToText"}]
dependencies = [
    "typer>=0.12",
    "openai>=1.6.1",
    "sounddevice>=0.4.6",
    "google-generativeai>=0.3.2",
]

# Whisper is optional; the CLI falls back to dummy ASR when missing.
# Users should install `whisper` separately if needed.

[project.optional-dependencies]
whisper = ["openai-whisper>=20231117"]

[tool.pytest.ini_options]
addopts = "-q"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"
