[project]
name = "zoom-to-text"
version = "0.1.0"
requires-python = ">=3.10"
description = "Windows CLI tool for local Whisper ASR (live or file)."
authors = [{name = "ZoomToText"}]
dependencies = [
    "typer>=0.12",
    "soundcard>=0.4.2",
    "openai-whisper>=20231117",
]

# Whisper is required; DummyASR remains available for tests/examples.

[project.optional-dependencies]
dev = [
    "black>=24.3.0",
    "ruff>=0.5.0",
    "pre-commit>=3.6.0",
]

[tool.pytest.ini_options]
addopts = "-q"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py310"]
exclude = [
  ".git",
  ".mypy_cache",
  ".pytest_cache",
  "venv",
  ".venv",
  "build",
  "dist",
]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
  ".git",
  ".mypy_cache",
  ".pytest_cache",
  "venv",
  ".venv",
  "build",
  "dist",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
